# ParquetRewriter

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  optimizer.rs  processing.rs  reporting.rs
