[package]
name = "parquet-column-grained-rewriter"
version = "0.1.0"
edition = "2021"

[lib]
name = "parquet_column_grained_rewriter"
path = "src/lib.rs"

[dependencies]
arrow = "56.1.0"
arrow-array = "56.1.0"
arrow-schema = "56.1.0"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
log = "0.4.14"
parquet = "56.1.0"
clap = { version = "4.1", default-features = false, features = ["std", "derive", "env", "help", "error-context", "usage"]}
rayon = "1.8"
env_logger = "0.11.8"